feat: get room api
