# grpc-gateway/dto_message_service.go
@@ -1,11 +1,21 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-06 02:49:07
+// Generated at: 2024-04-07 23:18:43
 
 package main
 
 import messagepb "github.com/espitman/gws-chat/pkg/protos/protogen/message-service"
 
+type messageServiceV1AddMemberToRoomResponseDto struct {
+	ResponseDto
+	Payload messagepb.V1AddMemberToRoomResponse
+}
+
 type messageServiceV1CreateRoomResponseDto struct {
 	ResponseDto
 	Payload messagepb.V1CreateRoomResponse
+}
+
+type messageServiceV1GetRoomResponseDto struct {
+	ResponseDto
+	Payload messagepb.V1GetRoomResponse
 }
