# grpc-gateway/router_message_service.go
@@ -1,5 +1,5 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-06 02:49:07
+// Generated at: 2024-04-07 23:18:43
 
 package main
 
@@ -7,8 +7,18 @@ import "github.com/gofiber/fiber/v2"
 
 func (r *router) messageServiceRouter(v fiber.Router) {
 	v.Post(
+		"/v1-add-member-to-room",
+		AuthMiddleware(r.userServiceClient),
+		r.messageServiceHandler.V1AddMemberToRoom,
+	)
+	v.Post(
 		"/room",
 		AuthMiddleware(r.userServiceClient),
 		r.messageServiceHandler.V1CreateRoom,
+	)
+	v.Get(
+		"/room/:RoomID",
+		AuthMiddleware(r.userServiceClient),
+		r.messageServiceHandler.V1GetRoom,
 	)
 }
