# grpc-gateway/router_user_service.go
@@ -1,11 +1,16 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-06 02:49:07
+// Generated at: 2024-04-07 23:18:43
 
 package main
 
 import "github.com/gofiber/fiber/v2"
 
 func (r *router) userServiceRouter(v fiber.Router) {
+	v.Get(
+		"/:userID",
+		AuthMiddleware(r.userServiceClient),
+		r.userServiceHandler.V1Get,
+	)
 	v.Get(
 		"/all",
 		AuthMiddleware(r.userServiceClient),
